Fix overflow. Update docs

--- a/src/scss/blocks/_background.scss
+++ b/src/scss/blocks/_background.scss
@@ -121,7 +121,7 @@
   z-index: 0;
 }
 
-@media (min-width: 1024px) {
+@media (width >= 1024px) {
   .glass {
     display: none;
   }
@@ -153,7 +153,7 @@
   }
 
   .redBall {
-    filter: drop-shadow(3px 6px 27px rgba(223, 125, 125, 0.25));
+    filter: drop-shadow(3px 6px 27px rgb(223 125 125 / 25%));
     height: 83px;
     left: 36.042vw;
     top: -37px;
@@ -165,12 +165,12 @@
     backdrop-filter: blur(2px);
     background: radial-gradient(
       82.3% 82.3% at 27.25% 26.5%,
-      rgba(255, 208, 208, 0.48) 0%,
-      rgba(212, 93, 93, 0.25) 59.67%,
-      rgba(167, 49, 49, 0.26) 78.59%,
-      rgba(130, 25, 25, 0.23) 100%
+      rgb(255 208 208 / 48%) 0%,
+      rgb(212 93 93 / 25%) 59.67%,
+      rgb(167 49 49 / 26%) 78.59%,
+      rgb(130 25 25 / 23%) 100%
     );
-    filter: drop-shadow(3px 6px 27px rgba(223, 125, 125, 0.25)) blur(2.5px);
+    filter: drop-shadow(3px 6px 27px rgb(223 125 125 / 25%)) blur(2.5px);
     height: 28px;
     right: 38.958vw;
     top: 427px;
@@ -181,12 +181,12 @@
     backdrop-filter: blur(2px);
     background: radial-gradient(
       82.3% 82.3% at 27.25% 26.5%,
-      rgba(236, 208, 255, 0.64) 0%,
-      rgba(161, 93, 207, 0.24) 59.67%,
-      rgba(118, 49, 164, 0.21) 78.59%,
-      rgba(86, 24, 128, 0.23) 100%
+      rgb(236 208 255 / 64%) 0%,
+      rgb(161 93 207 / 24%) 59.67%,
+      rgb(118 49 164 / 21%) 78.59%,
+      rgb(86 24 128 / 23%) 100%
     );
-    filter: drop-shadow(3px 6px 27px rgba(177, 118, 217, 0.25)) blur(5px);
+    filter: drop-shadow(3px 6px 27px rgb(177 118 217 / 25%)) blur(5px);
     height: 60px;
     right: 35.556vw;
     top: -121px;
